updating grpc api for account
