# gapi/converter.go
@@ -15,3 +15,20 @@ func convertUser(user db.User) *pb.User {
 		CreatedAt:         timestamppb.New(user.CreatedAt),
 	}
 }
+
+func convertAccount(account db.Account) *pb.Account {
+	return &pb.Account{
+		Id:        account.ID,
+		Owner:     account.Owner,
+		Balance:   account.Balance,
+		Currency:  account.Currency,
+		CreatedAt: timestamppb.New(account.CreatedAt),
+	}
+}
+
+func convertAccounts(accounts []db.Account) (res []*pb.Account) {
+	for _, account := range accounts {
+		res = append(res, convertAccount(account))
+	}
+	return res
+}
